--- a/src/Channel.css
+++ b/src/Channel.css
@@ -8,15 +8,13 @@
   height: 10rem;
   margin: 0.5rem;
   padding: 0.5rem;
-  background: linear-gradient(
-    68deg,
-    rgba(214, 214, 214, 1) 0%,
-    rgba(181, 181, 181, 1) 60%,
-    rgba(98, 98, 98, 1) 100%
-  );
+  background: #a5d6a7;
   border-radius: 1rem;
+  border: 0.2rem solid #75a478;
 }
 
 .value {
-  font-size: 6rem;
+  font-size: 5rem;
+  margin: 0;
+  padding: 0;
 }
