--- a/src/Channel.css
+++ b/src/Channel.css
@@ -25,6 +25,16 @@
   padding: 0;
 }
 
+.no-select {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
+}
+
 .card:hover {
   background: #74c977;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 7px 29px 0px;
