--- a/src/Channel.css
+++ b/src/Channel.css
@@ -19,10 +19,8 @@
   flex-direction: column;
 }
 
-.value {
+.temperature-value {
   font-size: 5rem;
-  margin: 0;
-  padding: 0;
 }
 
 .no-select {
@@ -37,6 +35,22 @@
 
 .card:hover {
   background: #74c977;
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 7px 29px 0px;
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+    rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
+    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
+    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
   transition: all 0.5s ease-in-out;
+}
+
+@media only screen and (max-width: 1300px) {
+  .card {
+    flex-direction: row;
+    justify-content: space-between;
+    height: 5rem;
+  }
+
+  .temperature-value {
+    font-size: 2rem;
+  }
 }
