--- a/src/ChannelsList.css
+++ b/src/ChannelsList.css
@@ -6,8 +6,12 @@
   background: #d7ffd9;
 }
 
-@media only screen and (max-width: 1300px) {
-  .list {
-    flex-direction: column;
-  }
+.select-btn {
+  background: #a5d6a7;
+  border: 0.1rem solid black;
+  border-radius: 0.2rem;
+  width: 8rem;
+  height: 2rem;
+  font-size: 1rem;
+  cursor: pointer;
 }
